# ca65-lsp

./: .gitignore  65816-opcodes.md  Cargo.toml  README.md  grammar.bnf  nes.toml  test.s  test2.s  test3.s
.github/ISSUE_TEMPLATE/: development-task.md
.github/workflows/: rust.yml
.zed/: tasks.json
analysis/: Cargo.toml
analysis/src/: arena.rs  def_analyzer.rs  lib.rs  scope_analyzer.rs  symbol_resolver.rs  visitor.rs
codespan/: Cargo.toml
codespan/src/: file.rs  file_id.rs  lib.rs  lsp.rs  position.rs  range.rs  span.rs
data/: 65816-opcodes.md  65xx-instruction-doc.json  Cargo.toml  ca65-context-types.json  ca65-dot-operators-doc.json  ca65-keyword-doc.json  ca65-keyword-snippets.json  features-doc.json  mackpack-packages-doc.json  macpack-packages-doc.json  snippets.json
data/src/: lib.rs
instructions/: 6502.json
lsp/: Cargo.toml
lsp/instructions/: 6502.txt  65816-opcodes.md
lsp/src/: asm_server.rs  ca65_doc.rs  cache_file.rs  codespan.rs  completion.rs  configuration.rs  definition.rs  documentation.rs  error.rs  include_resolver.rs  index_engine.rs  instructions.rs  logger.rs  main.rs  parser.rs  path.rs  server.rs  state.rs  symbol_cache.rs  text_store.rs
lsp/src/analysis/: def_analyzer.rs  mod.rs  scope_analyzer.rs  symbol_resolver.rs  visitor.rs
lsp/src/data/: convert_uri.rs  files.rs  indexing_state.rs  instructions.rs  mod.rs  path.rs  symbol.rs  units.rs
parser/: Cargo.toml
parser/src/: instructions.rs  lib.rs  main.rs  parser.rs  stream.rs  tokenizer.rs
parser/src/data/: token.rs  token_type.rs
scripts/: format.py
src/: asm_server.rs  codespan.rs  logger.rs  main.rs  parser.rs  server.rs  symbol_cache.rs
