[package]
name = "asm6502-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tower-lsp = "0.14.0"
serde_json = "1.0.132"
serde = "1.0.215"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = [ "full" ] }
jsonrpc-core = "14.0"
unicode-segmentation = "1.6"
