[package]
name = "asm6502-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tower-lsp = "0.14.0"
serde_json = "1.0.132"
serde = "1.0.215"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = ["full"] }
jsonrpc-core = "14.0"
unicode-segmentation = "1.6"
chrono = "0.4.38"
tokio-stream = "0.1.17"
toml = "0.8.19"
tempfile = "3.14.0"
tree-sitter = "0.24.4"
tree-sitter-ca65 = { git = "https://github.com/simonhochrein/tree-sitter-ca65", rev = "9e73befb5c3c6852f905964c22740c9605b03af8" }
streaming-iterator = "0.1.9"
