[package]
name = "asm6502-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tower-lsp = "0.20.0"
serde_json = "1.0.132"
serde = "1.0.215"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tempfile = "3.14.0"
streaming-iterator = "0.1.9"
parser = { path = "../parser" }
lazy_static = "1.5.0"
